<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/green">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"></LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <EditText
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/ET1"
        android:id="@+id/etnota1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/tv1"/>
    <EditText
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/ET2"
        android:id="@+id/etnota2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/tv2"/>

    <EditText
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/ET3"
        android:id="@+id/etnota3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/tv3"/>

    <EditText
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/ET4"
        android:id="@+id/etnota4"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:id="@+id/tv4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28dp"
        android:id="@+id/tvnotafinal"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton"
        android:id="@+id/bsumar"
        android:onClick="operar"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"></LinearLayout>








</LinearLayout>